k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: php-app
  labels:
    name: php-app
